--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "rename": "rname templates/views/index.html templates/views/index.hbs"
   },
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.2",
     "@angular/animations": "^4.0.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
@@ -35,6 +36,7 @@
     "moment": "2.17.1",
     "node-sass": "4.5.0",
     "node-sass-middleware": "0.11.0",
+    "node-ses": "^2.1.0",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
