--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "handlebars": "4.0.6",
     "jquery": "^2.2.4",
     "keystone": "4.0.0-beta.5",
-    "lodash": "^4.13.1",
+    "lodash": "^4.17.5",
     "materialize-css": "^0.100.1",
     "moment": "2.17.1",
     "node-sass": "4.5.0",
@@ -47,7 +47,7 @@
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.99",
     "codelyzer": "~3.0.1",
     "cpx": "^1.5.0",
     "del-cli": "^1.1.0",
